--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:name=".application.ContatoApplication"
         android:theme="@style/AppTheme">
         <activity android:name=".feature.contato.ContatoActivity"></activity>
-        <activity android:name=".feature.listacontatos.MainActivity">
+        <activity android:name=".feature.listacontatos.view.ListaDeContatosActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
